[package]
name = "mips"
version = "0.2.1"
authors = [
    "Shengqi Chen <i@harrychen.xyz>",
    "Yuhao Zhou <miskcoo@gmail.com>",
    "Jiajie Chen <noc@jiegec.ac.cn>"
]
edition = "2018"
repository = "https://github.com/Harry-Chen/rust-mips"
categories = ["embedded", "hardware-support", "no-std"]
description = "Low-level abstraction of MIPS processors"
keywords = ["mips", "register", "interrupt"]
license = "MIT"

[dependencies]
bitflags = "1.0"
bit_field = "0.9.0"
